--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_local_notifications: ^15.1.0+1
   awesome_notifications: ^0.6.19
   permission_handler: ^11.0.0
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
